# AI83

./: .gitignore  Session.vim  pyproject.toml
instance/: database.db
src/: main.py
src/chat_gpt/: __init__.py  chat_gpt.py  prompter.py
src/models/: __init__.py  description.py  songs.py  urls.py
src/scraper/: __init__.py  scraper.py
